feat: make new endpoint for categories delete, get by id and update
